--- a/src/component/AllPopular.css
+++ b/src/component/AllPopular.css
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 2vh 2vw;
     margin-top: 2vh;
-    background: linear-gradient(to right, rgb(136, 166, 222), rgb(42, 82, 152));
+    background: var(--background);
 }
 
 .HeaderAllpopular {
@@ -10,27 +10,35 @@
 }
 
 .HeaderAllpopular p {
-    padding: 1vh;
+    padding: 20px;
     font-size:1.5rem;
-    color: #000000;
+    color:var(--text-color);
 }
 
 .img-container {
     display: grid;
-    grid-template-columns: repeat(5, 16vw);
-    grid-template-rows: repeat(2, 8vw);
+    grid-template-columns: repeat(5, 12vw);
+    grid-template-rows: repeat(2, 9vw);
     justify-content: center;
 }
 
 .img-container img {
-    width: 12vh;
-    height: 12vh;
+    width: 15vh;
+    height: 15vh;
     object-fit: cover;
     border: 1px solid #ddd;
-    box-shadow: 0px 5px 5px 4px rgba(90, 9, 9, 0.571);
-    border-radius: 1vh; 
+    box-shadow: var(--box-shadow);
+    border-radius: 1vh;
+    filter: blur(1px);
+    transition: 0.5s; 
 }
 
+.img-container img:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+    filter: blur(0px);
+    box-shadow: var(--box-shadow);
+}
 /* Media Queries for smaller screens */
 @media (max-width: 900px) {
     .img-container {
