--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -1,7 +1,7 @@
 .header {
     height: 30vw;
     margin: auto;
-    background: linear-gradient(to right, rgb(136, 166, 222), rgb(42, 82, 152));
+    background: var(--background);
     background-size: cover; /* Ensure the background scales properly */
     position: relative;
     overflow: hidden; 
@@ -12,40 +12,42 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 1.5vw;
+    gap: 2vw;
     max-width: 50%;
     bottom: 10vw;
-    left: 10vw;
+    left: 20vw;
     animation: fadIn 2s;
+    cursor: pointer;
 }
 
 .header-content h2 {
     font-weight: 500;
     font-size: max(3.5vw, 18px);
-    color: rgb(0, 0, 0);
+    color:var(--text-color);
 }
 
 .header-content p {
-    color: rgb(0, 0, 0);
+    color:var(--text-color);
     font-size: 1.5vw;
 }
 
 .header-content button {
+    margin-left: 30px;
     border: none;
-    color: rgb(0, 0, 0);
+    color: var(--button-color);
     font-size: max(1.5vw, 13px);
     padding: 0.2vw 1vw;
-    font-weight: 500;
+    font-weight: 400;
     background-color: rgb(255, 253, 253);
-    border-radius: 30px;
+    border-radius: 8px;
 }
 
 /* Header image styling */
 .header-img {
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 40%; /* Adjust width as needed */
+    top: 5vh;
+    right: 10vw;
+    width: 50%; /* Adjust width as needed */
     height: 80%; /* Match the height of the header */
     z-index: 1; 
 }
