--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+:root{
+    --background-color: linear-gradient(270.4deg, rgb(0, 82, 207) 0.37%, rgb(255, 255, 255) 133.17%);
+    --background: linear-gradient(270.4deg, rgb(0, 82, 207) 0.37%, rgb(255, 255, 255) 133.17%);
+    --text-color: rgb(0, 0, 0);
+    --hover-color: rgb(0, 82, 207);
+    --secodary-color: rgb(0, 82, 207);
+    --box-shadow: 0px 5px 5px 4px rgba(90, 9, 9, 0.571)
+}
 *{
     padding: 0;
     margin: 0;
