--- a/src/component/Tablexe.css
+++ b/src/component/Tablexe.css
@@ -38,7 +38,7 @@
   .image-container img {
     width: 100%;
     max-height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
   
   table {
@@ -112,7 +112,7 @@
     }
   
     .image-container {
-      width: 70%; /* Adjust image width */
+      width: 80%; /* Adjust image width */
       height: 400px; /* Fixed height for larger screens */
     }
   
