--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-
+@font-face {
+    font-family: 'Avro';
+    src: url("./assets/Arvo-Regular.ttf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 :root{
-    --background-color: linear-gradient(270.4deg, rgb(0, 82, 207) 0.37%, rgb(255, 255, 255) 133.17%);
-    --background: linear-gradient(270.4deg, rgb(0, 82, 207) 0.37%, rgb(255, 255, 255) 133.17%);
+    --background-color: linear-gradient(to left, rgb(0, 109, 170), rgb(185, 214, 242));
+    /* --background-color: linear-gradient(270.4deg, rgb(0, 82, 207) 0.37%, rgb(255, 255, 255) 133.17%); */
+    --background:linear-gradient(to left, rgb(0, 107, 168), rgb(185, 214, 242));;
     --text-color: rgb(0, 0, 0);
-    --hover-color: rgb(0, 82, 207);
+    --hover-color: rgb(0, 42, 66);
     --secodary-color: rgb(0, 82, 207);
     --box-shadow: 0px 5px 5px 4px rgba(90, 9, 9, 0.571)
+    
 }
+
 *{
+    font-family: 'Avro',Regular;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family:Outfit ;
     scroll-behavior: smooth;
 }
 .app{
